--- a/src/css/components/_mouse-scroll.scss
+++ b/src/css/components/_mouse-scroll.scss
@@ -44,7 +44,7 @@
 
 	&__icon {
 		stroke: #000;
-		stroke-width: 4px;
+		stroke-width: 5px;
 	}
 
 	&__scroll {
